...
                ),
                title: Column(
                    children: [
                      Padding(
                          padding: const EdgeInsets.only(top: 12, bottom: 4),
                          child: Text(
                              'HIIT Training', style: context.theme.textTheme.titleMedium
                              .withColor(context.theme.colors.white)
                          )
                      ),
                      if(state case Loaded(:final data))
                        Text(
                            'Set ${data.currentExerciseNumber} of ${data.totalExercises}',
...
                                              '$minutes:${data.timeRemaining-minutes*60}',
                                              style: context.theme.textTheme.headlineLarge
                                                  .withColor(context.theme.colors.white)
                                          ),
                                          SizedBox(height: 6),
                                          Text(
                                              'Time Remaining',
                                              style: context.theme.textTheme.bodySmall
                                                  .withColor(context.theme.colors.lightMutedForeground)
                                          ),
                                          LabelText(data.currentExercise)
                                        ]
                                    )
...
