...
                  size: 22,
                ),
                  _isExpanded ? Padding(
                    key: const ValueKey("text"),
                    padding: const EdgeInsets.only(left: 8),
                    child: Text(
                      "Start", style: theme.textTheme.titleMedium
                          .withColor(theme.colors.lightForeground),
                    ),
                  ) : const SizedBox.shrink(key: ValueKey("empty"),),
              ],
            ),
          ),
...
